fix api excel topic